crates/toml_edit/tests/fixtures/invalid/string-bad-byte-escape.stderr
TOML parse error at line 1, column 13
  |
1 | naughty = "\xAg"
  |             ^
Unexpected `x`
While parsing escape sequence
While parsing a Basic String
